# jan-furry-game

./: .gitignore  Cargo.toml  README.org  default.nix  flake.nix  shell.nix
src/: asset_loading.rs  game.rs  lib.rs  logic.rs  main.rs  ui.rs
src/ui/: lobby_menu.rs  settings_menu.rs  start_menu.rs
