[package]
name = "jan-furry-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.13.2", features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy_asset_loader = "0.20.0"
bevy_render = "0.13.2"
catppuccin = "2.2.0"
image = { version = "0.25.1", default-features = false }
winit = { version = "0.29.15", default-features = false }

[lints.clippy]
nursery = "deny"
pendantic = "deny"
